[package]
name = "flint-ai"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
description = "Run koharu-torch inference graphs from RustScript host functions"

[[bin]]
name = "flint-ai"
path = "src/bin/flint-ai.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
image = "0.25"
imageproc = "0.27"
koharu-runtime = { git = "https://github.com/mayocream/koharu.git", rev = "efdcc462427dd816d81fe4b11a5ea00ef015f805", package = "koharu-runtime" }
koharu-torch = { git = "https://github.com/mayocream/koharu.git", rev = "efdcc462427dd816d81fe4b11a5ea00ef015f805", package = "koharu-torch" }
pd-host-function = { path = "../rustscript/pd-host-function" }
tokenizers = "0.22"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
vm = { package = "pd-vm", path = "../rustscript", default-features = false, features = ["runtime", "cranelift-jit"] }

[dev-dependencies]
tempfile = "3"
