[package]
name = "rs-flint"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Run koharu-torch inference graphs from RustScript host functions"

[lib]
name = "flint_ai"
path = "src/lib.rs"

[[bin]]
name = "flint"
path = "src/bin/flint-ai.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
encoding_rs = "0.8"
image = "0.25"
imageproc = "0.27"
koharu-runtime = { git = "https://github.com/mayocream/koharu.git", branch = "refactor/0705", package = "koharu-runtime" }
koharu-diffusion = { git = "https://github.com/mayocream/koharu.git", branch = "refactor/0705", package = "koharu-diffusion" }
koharu-llama = { git = "https://github.com/mayocream/koharu.git", branch = "refactor/0705", package = "koharu-llama" }
koharu-torch = { git = "https://github.com/mayocream/koharu.git", branch = "refactor/0705", package = "koharu-torch" }
libloading = "0.8"
pd-host-function = { path = "../rustscript/pd-host-function" }
tokenizers = "0.22"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
vm = { package = "pd-vm", path = "../rustscript", default-features = false, features = ["runtime", "cranelift-jit"] }

[dev-dependencies]
tempfile = "3"
